# ntpcd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  getopt.c  getopt1.c  ntpdc.h  system.h  udpc.c  udpd.c  xmalloc.c
