bin_PROGRAMS=udpd udpc  
udpd_SOURCES= udpd.c \
	      udpd.1 \
	      xmalloc.c \
	      system.h \
	      getopt.c \
              getopt1.c \
              getopt.h

udpc_SOURCES= udpc.c \
	      udpc.1 \
	      xmalloc.c \
	      system.h \
	      getopt.c \
              getopt1.c \
              getopt.h


#  uncomment the following if udpdc requires the math library
#udpdc_LDADD=-lm

