AC_INIT([ntpdc], [0.0.1], [none@github.com])
AM_INIT_AUTOMAKE([-Wall ])

AC_PROG_INSTALL
AC_PROG_CC

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h \
		sys/param.h \
		sys/time.h \
		time.h \
		sys/mkdev.h \
		sys/sysmacros.h \
		string.h \
		memory.h \
		fcntl.h \
		dirent.h \
		sys/ndir.h \
		ndir.h \
		alloca.h \
		locale.h )


AC_OUTPUT(Makefile)
